--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,14 @@ dependencies {
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-
+	implementation 'com.google.code.findbugs:jsr305:3.0.2'
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
+
+	modCompile "me.sargunvohra.mcmods:autoconfig1u:2.0"
+	include "me.sargunvohra.mcmods:autoconfig1u:2.0"
+	modApi "me.shedaniel.cloth:config-2:2.13.1"
+	include "me.shedaniel.cloth:config-2:2.13.1"
+	modImplementation "io.github.prospector:modmenu:1.10.0+build.28"
 }
 
 processResources {
