--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.2.6-SNAPSHOT'
+	id 'fabric-loom' version '0.6-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -13,6 +13,11 @@ group = project.maven_group
 minecraft {
 }
 
+repositories {
+    maven { url "https://maven.shedaniel.me/" }
+	maven { url "https://maven.terraformersmc.com/releases/" }
+}
+
 dependencies {
 	//to change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
@@ -20,12 +25,16 @@ dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	implementation 'com.google.code.findbugs:jsr305:3.0.2'
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
-
-	modCompile "me.sargunvohra.mcmods:autoconfig1u:2.0"
-	include "me.sargunvohra.mcmods:autoconfig1u:2.0"
-	modApi "me.shedaniel.cloth:config-2:2.13.1"
-	include "me.shedaniel.cloth:config-2:2.13.1"
-	modImplementation "io.github.prospector:modmenu:1.10.0+build.28"
+    
+    modApi("me.shedaniel.cloth:cloth-config-fabric:4.11.18") {
+        exclude(group: "net.fabricmc.fabric-api")
+    }
+	modApi("com.terraformersmc:modmenu:1.16.8")
+	//modCompile "me.sargunvohra.mcmods:autoconfig1u:2.0"
+	//include "me.sargunvohra.mcmods:autoconfig1u:2.0"
+	//modApi "me.shedaniel.cloth:config-2:2.13.1"
+	//include "me.shedaniel.cloth:config-2:2.13.1"
+	//modImplementation "io.github.prospector:modmenu:1.10.0+build.28"
 }
 
 processResources {
