--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 org.gradle.jvmargs  = -Xmx1G
 
 #Fabric properties
-minecraft_version   = 1.15.2
-yarn_mappings       = 1.15.2+build.15
-loader_version      = 0.8.2+build.194
+minecraft_version   = 1.16.5
+yarn_mappings       = 1.16.5+build.6
+loader_version      = 0.11.3
 
 #Mod properties
-mod_version         = 0.8.0
+mod_version         = 0.9.0
 maven_group         = quimufu.simple_creator
 archives_base_name  = simple_creator
 
 #Dependencies
-fabric_api_version  = 0.5.12+build.296-1.15
+fabric_api_version  = 0.32.5+1.16
