--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,17 @@
 org.gradle.jvmargs  = -Xmx1G
 
 #Fabric properties
-minecraft_version   = 1.16.5
-yarn_mappings       = 1.16.5+build.6
-loader_version      = 0.11.3
+minecraft_version=1.20.1
+minecraft_major_version=1.20
+yarn_mappings=1.20.1+build.9
+loader_version=0.14.21
+
+#Fabric api
+fabric_version=0.84.0+1.20.1
 
 #Mod properties
 mod_version         = 0.9.0
 maven_group         = quimufu.simple_creator
 archives_base_name  = simple_creator
 
-#Dependencies
-fabric_api_version  = 0.32.5+1.16
+tweed_version=1.3.0+mc1.20-pre1
