--- a/gradle.properties
+++ b/gradle.properties
@@ -10,8 +10,9 @@ loader_version=0.14.21
 fabric_version=0.84.0+1.20.1
 
 #Mod properties
-mod_version         = 0.9.0
+mod_version         = 0.10.0
 maven_group         = quimufu.simple_creator
 archives_base_name  = simple_creator
 
 tweed_version=1.3.0+mc1.20-pre1
+cloth_config_version=11.0.99
